Add OrderRepository.save() across all parts and simplify Part 1 OrderService (inline new, no extracted methods)